src/test/resources/acceptance/reject/emptyWhileStatementExpression.ul
int bar ()
{
    int id1;

    while () {
        id1 = "hello";
    }
}
